--- a/webtech/week6/3.css
+++ b/webtech/week6/3.css
@@ -31,7 +31,7 @@ input{
     margin-top:50px ;
     width: fit-content;
     font-size: 20px;
-    background-color: orange;
+    background-color: rgb(44, 36, 151);
     color: black;
     border:none;
     border-radius: 50px;
